# RoutePack

./: README.md  info.txt
documentacion/: Proyecto_Algoritmos.docx
solucion_computacional/: CMakeLists.txt  client_bst.c  client_bst.h  clients.txt  código_consolidado.txt  delivery_queue.c  delivery_queue.h  desktop.ini  files.c  files.h  graph.txt  main.c  package_avl.c  package_avl.h  package_list.c  package_list.h  packages.txt  returns_stack.c  returns_stack.h  routes_graph.c  routes_graph.h
